--- a/babyjazz.html
+++ b/babyjazz.html
@@ -13,7 +13,7 @@
     <meta name="description" content="音(Melody&Hermony)、リズム(Rhythm&Time)、心と身体に眠る感覚を呼び起こそう！宮崎県内の幼保園・児童福祉施設を中心に訪問します">
     <meta property="og:title" content="TORIHADA LABO">
     <meta property="og:description" content="音(Melody&Hermony)、リズム(Rhythm&Time)、心と身体に眠る感覚を呼び起こそう！宮崎県内の幼保園・児童福祉施設を中心に訪問します">
-    <meta property="og:image" content="img/logo.png">
+    <meta property="og:image" content="img/main_01.png">
     <meta property="og:image:alt" content="TORIHADA LABO">
     <meta property="og:locale" content="ja_JP">
     <meta property="og:type" content="website">
@@ -61,8 +61,8 @@
                         <span class="border-yellow">リズム(Rhythm&Time)</span></span><br>
                     <span class="">心と身体に眠る感覚を</span><br>
                     <span class="">呼び起こそう</span><br>
-                    <span class="">宮崎県内</span>
-                    <span class="">幼保園・児童福祉施設を中心に訪問します</span></p>
+                    <span class="">宮崎県内を</span>
+                    <span class="">中心に公演・ワークショップを行います</span></p>
             </div>
             <!--/header_area-->
             <div>
@@ -73,7 +73,7 @@
                 </ul>
             </div>
             <ul class="header-utility">
-                <li> <a href="2021naturalbeat_1205.html" style="font-family: 'Dancing Script', cursive; font-size: 1.3rem;">Natural Beat GO!</a> </li>
+                <li> <a href="music_distribution.html" style="font-family: 'Kosugi Maru', sans-serif; font-size: 1.2em;">Album “Baby Jazz”購入</a> </li>
             </ul>
         </header>
         <main>
@@ -83,11 +83,35 @@
                     <div class="row mt-5">
                         <div class="col-md-12 mt-md-0">
                             <p class="lead"> ファミリー層へ送る文化振興イベント。<br> 2019年より新たに五感×音楽であそぶProject TORIHADA LABOを始動。 その一環としてジャズにアレンジした手遊び歌などの体感型ライブに加え、 五感をフルに使う体感型イベントへ生まれ変わり、150名を超える親子や
-                                医療関係者や地域の大人の方々などに楽しんで頂きました。 2020年からは新型コロナウイルス感染拡大防止の観点から募集人数を制限して開催します。 </p>
+                                医療関係者や地域の大人の方々などに楽しんで頂きました。 2022年はイベントの為に書き下ろしたオリジナル曲を演奏したり、手遊びジャズのアレンジも一新。ゲストダンサーを招致し一層楽しめる内容となっています。 </p>
                         </div>
                     </div>
                     <div class="row mt-5 pb-5 border-bottom border-3 wrapper">
                         <!-- //////////////////////////////////////// -->
+                        <div class="col-md-6">
+                            <div class="card mt-5 bg-dark border text-center smoothTrigger">
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/hp1Lz7pzB5I" title="YouTube video player" frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+                            </div>
+                            <h1 class="display-5 text-center mt-3 fw-bolder"> Baby Jazz2021<br>リハーサル </h1>
+                            <p class="text-left babyjazz">
+                                昨年は新型コロナの影響で公演の<br>延期が相次ぎました。<br>昨年会えなかった沢山のお友達に<br>今年は会えたら嬉しいです。
+                            </p>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="card mt-5 bg-dark border text-center smoothTrigger">
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/_b99VEfpPEE" title="YouTube video player" frameborder="0"
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                </div>
+                            </div>
+                            <h1 class="display-5 text-center mt-3 fw-bolder"> Album 「Baby Jazz」<br>ティザー動画</h1>
+                            <p class="text-left babyjazz">
+                                アレンジを一新した今年の手遊びジャズ。アルバム収録曲全て公演で演奏します。いつも聴く手遊びとはちょっと違うアレンジ、楽しいよ！覚えて一緒に遊ぼうね！
+                            </p>
+                        </div>
                         <div class="col-md-6">
                             <div class="card mt-5 bg-dark border text-center smoothTrigger">
                                 <div class="embed-responsive embed-responsive-16by9">
@@ -112,31 +136,7 @@
                             <h1 class="display-5 text-center mt-3 fw-bolder"> BABY JAZZ2019 [アドリブ×触感絵本]の模様 </h1>
                             <p class=" text-center"> 触感のあるパーツを絵本に貼るワークショップの後、即興BGM付き読み聞かせを行いました。公演後は香り付きの大きな絵本をエントランスで展示、五感で感じる絵本を体感してもらいました。 </p>
                         </div>
-                        <div class="col-md-10">
-                            <div class="accordion text-dark" id="accordionExample">
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header" id="headingOne">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true"
-                                            aria-controls="collapseOne"> 協賛 </button>
-                                    </h2>
-                                    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                                        <div class="accordion-body"> ・あがた幼稚園　・いしなだ事務所　・植村理髪店　・飫肥めしんせや　・風田郵便局　・金丸アパート　・京屋酒造有限会社　・見聞読タナカ(株)田中書店　・COFFEE ROASTER HAMASAKI ・Sound Studio
-                                            Progret(ex.Room1984) ・坂本不動産　・﨑村法務合同事務所　・四季の味みどりや　・株式会社清水工務店　・有限会社鈴木建設　・すみれ薬局有限会社 ・たにぐちレディースクリニック　・小さなお菓子やcoco
-                                            ・とうごうのサロン　・なちゅら　・株式会社日南建設コンサルタント　・株式会社日南保険サービス　・バンパーのイシザキ　 ・日高章太郎税理士事務所　・ホテルMARIX ・ほほえみの里　・ほんのえき田中屋　・有限会社丸金保険事務所　・株式会社宮崎南印刷　・宮崎南部信用金庫　・宮崎日日新聞榎原販売所
-                                            ・有料老人ホームよりべ　・瀬戸山トシ子　（敬称略） </div>
-                                    </div>
-                                </div>
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header" id="headingTwo">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
-                                            aria-controls="collapseTwo"> 後援 </button>
-                                    </h2>
-                                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                                        <div class="accordion-body"> ・宮崎県教育委員会・日南市教育委員会 ・宮崎日日新聞社・NHK宮崎放送局・MRT宮崎放送 ・UMKテレビ宮崎・エフエム宮崎・MCN宮崎ケーブルテレビ ・宮崎サンシャインFM・BTV株式会社　（敬称略） </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+
                         <div class="line"></div>
                         <div class="col-md-6">
                             <div class="card mt-5 bg-dark border text-center smoothTrigger">
@@ -170,7 +170,7 @@
                                 </dvi>
                             </div>
                             <h1 class="display-5 text-center mt-3 fw-bolder"> BABY JAZZ 2018の模様 </h1>
-                            <p class=" text-center"> 82名を動員した2018年(平成30年度)は日南市の城下町、飫肥・小村記念館ホールにて開催。長崎出身の俳優の朗読による生演奏付き紙芝居や、 童謡のジャズアレンジライブで一体感のあるイベントとなりました。<br> 主催：日南青年会議所<br> 理事長：合同会社 五和　代表取締役社長 田中良明
+                            <p class=" text-center"> 82名を動員した2018年(平成30年度)は日南市の城下町、飫肥・小村記念館ホールにて開催。長崎出身の俳優の朗読による生演奏付き紙芝居や、 童謡のジャズアレンジライブで一体感のあるイベントとなりました。
                             </p>
                         </div>
                         <div class="col-md-3">
@@ -180,7 +180,7 @@
                                 </dvi>
                             </div>
                             <h1 class="display-5 text-center mt-3 fw-bolder"> BABY JAZZ 2017の模様 </h1>
-                            <p class=" text-center"> 日南市子育て支援センターことことにて開催。150名を動員する盛り上がりで開催2年目にして地域文化振興の役割を担うイベントとして走り出せた年となりました。<br> 主催：日南青年会議所<br> 理事長：(株)丸商建設 代表取締役社長 榎木田 大資 </p>
+                            <p class=" text-center"> 日南市子育て支援センターことことにて開催。150名を動員する盛り上がりで開催2年目にして地域文化振興の役割を担うイベントとして走り出せた年となりました。</p>
                         </div>
                         <div class="col-md-3">
                             <div class="card mt-5 bg-dark  border text-center smoothTrigger">
@@ -189,25 +189,38 @@
                                 </dvi>
                             </div>
                             <h1 class="display-5 text-center mt-3 fw-bolder"> BABY JAZZ 2016の模様 </h1>
-                            <p class=" text-center"> 日南青年会議所主催の地域文化振興イベントが油津Yottenにてスタート。初めての試みで60名を動員し、 来場者からは喜びの声が聞かれ嬉しい幕開けとなりました。<br> 主催：日南青年会議所<br> 理事長：(株)丸商建設 代表取締役社長 榎木田 大資 </p>
+                            <p class=" text-center"> 地域文化振興イベントが油津Yottenにてスタート。初めての試みで60名を動員し、 来場者からは喜びの声が聞かれ嬉しい幕開けとなりました。</p>
                         </div>
                     </div>
                 </div>
             </section>
-            <collaboration>
-                <h2>協働</h2>
-                <div class="sp-bottom">
-                    <p style="margin-left: 30%;">日南青年会議所 instagram @nichinan.jc</p>
+            <collaboration class="pc">
+                <div class="sp-bottom collaboration">
+                    <h2>Baby Jazz 活動実績</h2>
                     <ul>
-                        <li>
-                            <a href="https://www.instagram.com/nichinan.jc/" target="_blank" rel="noopener noreferrer">
-                                <img src="img/instagram.svg" alt="">
-                            </a>
-                        </li>
+                        <li><strong>平成28年度</strong> Baby Jazz2016~feat.おはなしと音楽の森~ in油津Yotten</li>
+                        <li><strong>平成29年度</strong> Baby Jazz2017~feat.おはなしと音楽の森~ in日南市子育て支援センターことこと</li>
+                        <li><strong>平成30年度</strong> Baby Jazz2018~feat.即興演奏と朗読紙芝居~ in小村記念館ホール</li>
+                        <li><strong>令和元年度 </strong>Baby Jazz~小さな町のクリスマス~ in油津Yotten</li>
+                        <li><strong>令和2年度 </strong>Baby Jazz~五感と音楽で遊ぼう~ /県内３会場</li>
+                        <li><strong>令和3年度 </strong>Baby Jazz~五感スイッチ音の旅~ /県内３会場＋オンライン公演</li>
+                        <li><strong>令和4年度 </strong>Baby Jazz2022# その夢がいーじゃん#叶えればいーじゃん /県内３会場予定</li>
                     </ul>
-                </div><br>
-                <br>
-                <a href="https://www.my-machitan.jp/" style="margin-left: 30%;">都城まちづくり（株）</a>
+                </div>
+            </collaboration>
+            <collaboration class="mobile">
+                <div class="sp-bottom collaboration">
+                    <h2>Baby Jazz 活動実績</h2>
+                    <ul>
+                        <li><strong>平成28年度</strong> Baby Jazz2016~<br>&nbsp;feat.おはなしと音楽の森~ in油津Yotten</li>
+                        <li><strong>平成29年度</strong> Baby Jazz2017~<br>&nbsp;feat.おはなしと音楽の森~ in日南市子育て支援センターことこと</li>
+                        <li><strong>平成30年度</strong> Baby Jazz2018~<br>&nbsp;feat.即興演奏と朗読紙芝居~ in小村記念館ホール</li>
+                        <li><strong>令和元年度 </strong>Baby Jazz~<br>&nbsp;小さな町のクリスマス~ in油津Yotten</li>
+                        <li><strong>令和2年度 </strong>Baby Jazz~<br>&nbsp;五感と音楽で遊ぼう~ /県内３会場</li>
+                        <li><strong>令和3年度 </strong>Baby Jazz~<br>&nbsp;五感スイッチ音の旅~ /県内３会場＋オンライン公演</li>
+                        <li><strong>令和4年度 </strong>Baby Jazz2022<br>&nbsp;#その夢がいーじゃん#叶えればいーじゃん /県内３会場予定</li>
+                    </ul>
+                </div>
             </collaboration>
         </main>
         <div class="openbtn">
@@ -221,7 +234,8 @@
                     <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                     <li><a href="babyjazz.html">BABY JAZZ</a></li>
                     <li><a href="news.html">NEWS</a></li>
-                    <li><a href="2021naturalbeat_1205.html">EVENT</a></li>
+                    <li><a href="2022baby_jazz.html">2022 BABY JAZZ</a></li>
+                    <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                     <li><a href="inquiry.html">お問い合わせ</a></li>
                 </ul>
             </div>
@@ -260,12 +274,13 @@
                             <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                             <li><a href="babyjazz.html">BABY JAZZ</a></li>
                             <li><a href="news.html">NEWS</a></li>
-                            <li><a href="2021naturalbeat_1205.html">EVENT</a></li>
+                            <li><a href="2022baby_jazz.html">2022 BABY JAZZ</a></li>
+                            <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                             <li><a href="inquiry.html">お問い合わせ</a></li>
                         </ul>
                         <!--/footer-sitemap-->
                     </div>
-                    <div class="sp-bottom">
+                    <div class="sp-bottom mb-5">
                         <p>フォローやメッセージなどお気軽にコンタクトくださいませ</p>
                         <p>TORIHADA LABO instagram @torihada_labo</p>
                         <ul>
@@ -279,11 +294,38 @@
                     <!-- /footer-area -->
                 </div>
             </div>
-            <div>
-                <small>&copy; TORIHADA LABO</small>
+            <div class="company_info">
+                <h3>
+                    Company Infomaition
+                </h3>
+                <p>会社概要</p>
+                <table>
+                    <tr>
+                        <td>社名</td>
+                        <td>一般社団法人TORIHADA LABO</td>
+                    </tr>
+                    <tr>
+                        <td>創業</td>
+                        <td>令和4年3月14日</td>
+                    </tr>
+                    <tr>
+                        <td>所在地</td>
+                        <td>宮崎県宮崎市宮崎駅東1丁目5番地&nbsp;1サーパス宮崎</td>
+                    </tr>
+                    <tr>
+                        <td>事業</td>
+                        <td>1.東洋西洋音楽の普及事業</td>
+                    </tr>
+                    <td>内容</td>
+                        <td>2.音楽文化の発展のための事業</td>
+                    </tr>
+                </table>
             </div>
             <div>
-                <small><a href="https://homepage.opp-studio.tech/"><img src="img/favicon-32x32 -opp.png" style="width: 24px; height: 24px;" alt="opp-logo"> 制作 O.P.P Studio ~みんなにITの力を！ </a></small>
+                <small>&copy; Torihada Labo Inc.</small>
+            </div>
+            <div>
+                <small><a href="https://homepage.opp-studio.tech/"><img src="img/favicon-32x32 -opp.png" style="width: 24px; height: 24px;" alt="opp-logo"> 制作 O.P.P Studio 〜みんなにITの力を！ </a></small>
             </div>
             <p id="page-top"><a href="#"><span>Page<br>Top</span></a></p>
         </footer>
