--- a/inquiry.html
+++ b/inquiry.html
@@ -13,7 +13,7 @@
     <meta name="description" content="音(Melody&Hermony)、リズム(Rhythm&Time)、心と身体に眠る感覚を呼び起こそう！宮崎県内の幼保園・児童福祉施設を中心に訪問します">
     <meta property="og:title" content="TORIHADA LABO">
     <meta property="og:description" content="音(Melody&Hermony)、リズム(Rhythm&Time)、心と身体に眠る感覚を呼び起こそう！宮崎県内の幼保園・児童福祉施設を中心に訪問します">
-    <meta property="og:image" content="img/logo.png">
+    <meta property="og:image" content="img/main_01.png">
     <meta property="og:image:alt" content="TORIHADA LABO">
     <meta property="og:locale" content="ja_JP">
     <meta property="og:type" content="website">
@@ -59,8 +59,8 @@
                         <span class="border-yellow">リズム(Rhythm&Time)</span></span><br>
                     <span class="">心と身体に眠る感覚を</span><br>
                     <span class="">呼び起こそう</span><br>
-                    <span class="">宮崎県内</span>
-                    <span class="">幼保園・児童福祉施設を中心に訪問します</span></p>
+                    <span class="">宮崎県内を</span>
+                    <span class="">中心に公演・ワークショップを行います</span></p>
             </div>
             <!--/header_area-->
             <div>
@@ -71,7 +71,7 @@
                 </ul>
             </div>
             <ul class="header-utility">
-                <li> <a href="2021naturalbeat_1205.html" style="font-family: 'Dancing Script', cursive; font-size: 1.3rem;">Natural Beat GO!</a> </li>
+                <li> <a href="music_distribution.html" style="font-family: 'Kosugi Maru', sans-serif; font-size: 1.2em;">Album “Baby Jazz”購入</a> </li>
             </ul>
         </header>
         <div class="openbtn">
@@ -85,7 +85,8 @@
                     <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                     <li><a href="babyjazz.html">BABY JAZZ</a></li>
                     <li><a href="news.html">NEWS</a></li>
-                    <li><a href="2021naturalbeat_1205.html">EVENT</a></li>
+                    <li><a href="2022baby_jazz.html">2022 BABY JAZZ</a></li>
+                    <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                     <li><a href="inquiry.html">お問い合わせ</a></li>
                 </ul>
             </div>
@@ -95,7 +96,7 @@
             <div class="container" style="min-height: 100vh;">
                 <div class="row">
                     <div class="card border-0" style="height: 780px; width: fit-content; background-color: #f0f0f0;">
-                        <div class="card-body">
+                        <div id="inquiry" class="card-body">
                             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeDLWtQlmEQ53geqCGGmqi9uFlNi-qf_3TWqKk7RIvp3sHMIQ/viewform?embedded=true" width="1400" height="770"
                                 border-color="#f0f0f0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
                         </div>
@@ -146,7 +147,8 @@
                         <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                         <li><a href="babyjazz.html">BABY JAZZ</a></li>
                         <li><a href="news.html">NEWS</a></li>
-                        <li><a href="2021naturalbeat_1205.html">EVENT</a></li>
+                        <li><a href="2022baby_jazz.html">2022 BABY JAZZ</a></li>
+                        <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                         <li><a href="inquiry.html">お問い合わせ</a></li>
                     </ul>
                     <!--/footer-sitemap-->
@@ -164,11 +166,36 @@
                 </div>
                 <!-- /footer-area -->
             </div>
-            <div>
-                <small>&copy; TORIHADA LABO</small>
+            <div class="company_info">
+                <h3> Company Infomaition </h3>
+                <p>会社概要</p>
+                <table>
+                    <tr>
+                        <td>社名</td>
+                        <td>一般社団法人TORIHADA LABO</td>
+                    </tr>
+                    <tr>
+                        <td>創業</td>
+                        <td>令和4年3月14日</td>
+                    </tr>
+                    <tr>
+                        <td>所在地</td>
+                        <td>宮崎県宮崎市宮崎駅東1丁目5番地1サーパス宮崎</td>
+                    </tr>
+                    <tr>
+                        <td>事業</td>
+                        <td>1.東洋西洋音楽の普及事業</td>
+                    </tr>
+                    <td>内容</td>
+                    <td>2.音楽文化の発展のための事業</td>
+                    </tr>
+                </table>
             </div>
             <div>
-                <small><a href="https://homepage.opp-studio.tech/"><img src="img/favicon-32x32 -opp.png" style="width: 24px; height: 24px;" alt="opp-logo"> 制作 O.P.P Studio ~みんなにITの力を！ </a></small>
+                <small>&copy; Torihada Labo Inc.</small>
+            </div>
+            <div>
+                <small><a href="https://homepage.opp-studio.tech/"><img src="img/favicon-32x32 -opp.png" style="width: 24px; height: 24px;" alt="opp-logo"> 制作 O.P.P Studio 〜みんなにITの力を！ </a></small>
             </div>
             <p id="page-top"><a href="#"><span>Page<br>Top</span></a></p>
         </footer>
