--- a/news.html
+++ b/news.html
@@ -13,7 +13,7 @@
     <meta name="description" content="音(Melody&Hermony)、リズム(Rhythm&Time)、心と身体に眠る感覚を呼び起こそう！宮崎県内の幼保園・児童福祉施設を中心に訪問します">
     <meta property="og:title" content="TORIHADA LABO">
     <meta property="og:description" content="音(Melody&Hermony)、リズム(Rhythm&Time)、心と身体に眠る感覚を呼び起こそう！宮崎県内の幼保園・児童福祉施設を中心に訪問します">
-    <meta property="og:image" content="img/logo.png">
+    <meta property="og:image" content="img/main_01.png">
     <meta property="og:image:alt" content="TORIHADA LABO">
     <meta property="og:locale" content="ja_JP">
     <meta property="og:type" content="website">
@@ -66,8 +66,8 @@
                         <span class="border-yellow">リズム(Rhythm&Time)</span></span><br>
                     <span class="">心と身体に眠る感覚を</span><br>
                     <span class="">呼び起こそう</span><br>
-                    <span class="">宮崎県内</span>
-                    <span class="">幼保園・児童福祉施設を中心に訪問します</span></p>
+                    <span class="">宮崎県内を</span>
+                    <span class="">中心に公演・ワークショップを行います</span></p>
             </div>
             <!--/header_area-->
             <div>
@@ -78,7 +78,7 @@
                 </ul>
             </div>
             <ul class="header-utility">
-                <li> <a href="2021naturalbeat_1205.html" style="font-family: 'Dancing Script', cursive; font-size: 1.3rem;">Natural Beat GO!</a> </li>
+                <li> <a href="music_distribution.html" style="font-family: 'Kosugi Maru', sans-serif; font-size: 1.2em;">Album “Baby Jazz”購入</a> </li>
             </ul>
         </header>
         <main>
@@ -86,6 +86,42 @@
             <section id="concept" class="inner">
                 <h2 class="flipRightTopTrigger"><span>News</span>お知らせ</h2>
             </section>
+            <hr>
+            <div class="container col-md-6 col-mx-auto row g-0 bg-light  mt-md-5 mb-6" style="float:none;margin:auto">
+                <div class="col-md-6 mb-md-0 p-md-4">
+                    <img src="img/babyjazz_cd.jpg" class="w-100" alt="2021natural beat">
+                </div>
+                <div class="col-md-6 p-4 ps-md-0" id="news_13">
+                    <ul class="list-group" id="news_15">
+                        <li class="list-group-item active" aria-current="true">1st Album<br>“Baby Jazz”リリース！</li>
+                        <li class="list-group-item">◆『Baby Jazz』<br>早期購入特典◆<br>
+                            <hr> 絵本付きパンフレット <br>
+                            ※特典は先着となり、無くなり次第終了となります。<br>
+                            ※特典は当HPからお申し込みされた方のみ限定となります。<br>
+
+                        <li class="list-group-item"> <a href="music_distribution.html" class="btn btn-primary">Album「Baby Jazz」<br>ご購入はここをクリック</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class="container col-md-6 col-mx-auto row g-0 bg-light  mt-md-5 mb-6" style="float:none;margin:auto">
+                <div class="col-md-6 mb-md-0 p-md-4">
+                    <img src="img/babyjazz_2022.JPG" class="w-100" alt="2021natural beat">
+                </div>
+                <div class="col-md-6 p-4 ps-md-0" id="news_14">
+                    <ul class="list-group" id="news_13">
+                        <li class="list-group-item active" aria-current="true">2022 Baby Jazz <br>#その夢がいーじゃん<br>#叶えればいーじゃん</li>
+                        <li class="list-group-item">会場：宮崎県立芸術劇場 <br>
+                            <hr> 日時：2022年9月24日(土)<br>
+                            <hr>開場14時00分～開演14時30分<br>
+                            <hr>主催:TORIHADA LABO <br>
+                            <hr>※インターネット予約は宮崎県立芸術劇場HPから7/10(日)より承ります。<br>
+                        <li class="list-group-item"> <a href="https://miyazaki-ac.jp/ticket-center/" class="btn btn-primary">チケットのご予約は<br>こちらをクリック</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
             <hr>
             <div class="container col-md-6 col-mx-auto row g-0 bg-light  mt-md-5 mb-6" style="float:none;margin:auto">
                 <div class="col-md-6 mb-md-0 p-md-4">
@@ -329,7 +365,8 @@
                 <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                 <li><a href="babyjazz.html">BABY JAZZ</a></li>
                 <li><a href="news.html">NEWS</a></li>
-                <li><a href="2021naturalbeat_1205.html">EVENT</a></li>
+                <li><a href="2022baby_jazz.html">2022 BABY JAZZ</a></li>
+                <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                 <li><a href="inquiry.html">お問い合わせ</a></li>
             </ul>
         </div>
@@ -368,7 +405,8 @@
                         <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                         <li><a href="babyjazz.html">BABY JAZZ</a></li>
                         <li><a href="news.html">NEWS</a></li>
-                        <li><a href="2021naturalbeat_1205.html">EVENT</a></li>
+                        <li><a href="2022baby_jazz.html">2022 BABY JAZZ</a></li>
+                        <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                         <li><a href="inquiry.html">お問い合わせ</a></li>
                     </ul>
                     <!--/footer-sitemap-->
@@ -387,11 +425,36 @@
                 <!-- /footer-area -->
             </div>
         </div>
-        <div>
-            <small>&copy; TORIHADA LABO</small>
+        <div class="company_info">
+            <h3> Company Infomaition </h3>
+            <p>会社概要</p>
+            <table>
+                <tr>
+                    <td>社名</td>
+                    <td>一般社団法人TORIHADA LABO</td>
+                </tr>
+                <tr>
+                    <td>創業</td>
+                    <td>令和4年3月14日</td>
+                </tr>
+                <tr>
+                    <td>所在地</td>
+                    <td>宮崎県宮崎市宮崎駅東1丁目5番地1サーパス宮崎</td>
+                </tr>
+                <tr>
+                    <td>事業</td>
+                    <td>1.東洋西洋音楽の普及事業</td>
+                </tr>
+                <td>内容</td>
+                <td>2.音楽文化の発展のための事業</td>
+                </tr>
+            </table>
         </div>
         <div>
-            <small><a href="https://homepage.opp-studio.tech/"><img src="img/favicon-32x32 -opp.png" style="width: 24px; height: 24px;" alt="opp-logo"> 制作 O.P.P Studio ~みんなにITの力を！ </a></small>
+            <small>&copy; Torihada Labo Inc.</small>
+        </div>
+        <div>
+            <small><a href="https://homepage.opp-studio.tech/"><img src="img/favicon-32x32 -opp.png" style="width: 24px; height: 24px;" alt="opp-logo"> 制作 O.P.P Studio 〜みんなにITの力を！ </a></small>
         </div>
         <p id="page-top"><a href="#"><span>Page<br>Top</span></a></p>
     </footer>
